<resources>
    <string name="app_name">Pantry Raid</string>

    <string name="hello_blank_fragment">hello</string>
    <string name="SHARED_PREFS">pantry-raid.SHAREDPREFS</string>
    <string name="username_pref">username</string>


    <string name="verify_email_message">Enter the code from your email.</string>

    <string name="user_name_hint">Email</string>
    <string name="invalid_email">Email address entered is invalid.</string>

    <string name="password_hint">Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="reenter_hint">Re-enter Password</string>
    <string name="password_length_error">Password must be at least 6 Characters in length</string>
    <string name="password_match_error">Passwords must match</string>
    <string name="forgot_password_no_email">Put in a valid email before attempting to recover
        information.</string>
    <string name="password_error">Username/Password incorrect. Please try again</string>
    <string name="logout_option">Logout</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="forgot_password_button">Forgot password?</string>
    <string name="skip_button">Skip</string>
    <string name="verify_button">Verify</string>
    <string name="change_button">Change Password</string>

    <string name="user_exists">Email already registered</string>
    <string name="forgot_password_message">Enter the code from your email.</string>
    <string name="verify_message">Please enter verification code sent to email</string>
    <string name="invalid_username_password">User/password combination invalid.</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="recipe_search_bar_hint">Add ingredient</string>
    <string name="no_recipes_found">No recipes found</string>
    <string name="search_for_recipes">Search for Recipes</string>
    <string name="clear_ingredients_from_search">Clear Ingredients</string>
    <string name="title_activity_display_recipe_results">DisplayRecipeResultsActivity</string>

</resources>
