<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="group12.tcss450.uw.edu.appproject.activities.TabbedPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/search_bar_background">

            <ImageView
                android:id="@+id/searchIcon"
                android:src="@drawable/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />

            <AutoCompleteTextView
                android:id="@+id/searchBar"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:inputType="textShortMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/colorText"
                android:hint="@string/recipe_search_bar_hint"
                android:textColorHint="@color/colorDarkText"
                android:background="@android:color/transparent"

                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/searchIcon"
                app:layout_constraintRight_toLeftOf="@+id/addButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/addButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="88dp"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:background="@null"
                android:padding="0dp"
                android:stateListAnimator="@null"
                android:text="Add"
                android:textColor="@color/colorText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/doneButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_for_recipes"
                android:textColor="@color/colorText"
                android:layout_gravity="start"/>

            <Button
                android:id="@+id/clearButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_ingredients_from_search"
                android:textColor="@color/colorText"
                android:layout_gravity="end"/>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/ingredientList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:dividerHeight="14dp"
            android:divider="@android:color/transparent" />
    </FrameLayout>

</LinearLayout>
